--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -75,7 +75,7 @@ jobs:
     - name: Checkout the code
       uses: actions/checkout@v2
     - name: Build image
-      run: docker build . --file Dockerfile2 --tag test:latest 
+      run: docker build . --file Dockerfile --tag test:latest 
    anchore-scan:
     runs-on: ubuntu-latest
     needs: [build-image]
