--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: test
+  IMAGE_NAME: repoleak
 jobs:
    codeql-scan:
     name: CodeQL-Scan
@@ -75,20 +75,20 @@ jobs:
     - name: Checkout the code
       uses: actions/checkout@v2
     - name: Build image
-      run: docker build . --file Dockerfile --tag test:latest 
-   anchore-scan:
+      run: echo "build the docker images" 
+   image-anchore-scan-push:
     runs-on: ubuntu-latest
     needs: [build-image]
     steps:
     - name: Checkout the code
       uses: actions/checkout@v2
     - name: Build image
-      run: docker build . --file Dockerfile2 --tag test:latest 
+      run: docker build . --file Dockerfile --tag repoleak:latest 
     - name: Run the local Scan Action with SARIF generation enabled
       id: scan
       uses: anchore/scan-action@v2
       with:
-        image: "test:latest"
+        image: "repoleak:latest"
         debug: true
         acs-report-enable: true
         #fail-build: true
@@ -104,22 +104,11 @@ jobs:
     - name: ls -l
       run: ls -l
 
-   docker-images-push:
-    # The type of runner that the job will run on      
-    runs-on: [ ubuntu-latest ]
+    - name: Log into registry
+      run: echo "${{ secrets.TEST_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
-    needs: [license-scan,anchore-scan]
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Build image
-        run: docker build . --file Dockerfile2 --tag test:latest 
-
-      - name: Log into registry
-        run: echo "${{ secrets.TEST_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
-
-      - name: Push image
-        run: |
+    - name: Push image
+      run: |
           IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
