--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -101,8 +101,11 @@ jobs:
       uses: github/codeql-action/upload-sarif@v1
       with:
         sarif_file: ${{ steps.scan.outputs.sarif }}
-    - name: ls -l
-      run: ls -l
+
+    - name: upload license scan SARIF report
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: license-scan.sarif
 
     - name: Log into registry
       run: echo "${{ secrets.TEST_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
