--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -67,7 +67,10 @@ jobs:
       with:
         name: reports-depscan
         path: reports
-      #if: ${{ always() }} 
+    - name: upload license scan SARIF report
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: license-scan.sarif
    build-image:
     runs-on: ubuntu-latest
     needs: [codeql-scan,license-scan]
@@ -102,10 +105,11 @@ jobs:
       with:
         sarif_file: ${{ steps.scan.outputs.sarif }}
 
-    - name: upload license scan SARIF report
-      uses: github/codeql-action/upload-sarif@v1
+    - name: upload artifact
+      uses: actions/upload-artifact@v1
       with:
-        sarif_file: license-scan.sarif
+        name: reports-anchore-scan
+        path: ${{ steps.scan.outputs.sarif }}
 
     - name: Log into registry
       run: echo "${{ secrets.TEST_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
